# operationalspace

./: .gitignore  .gitmodules  CMakeLists.txt  CONCEPT  README.md  make.bat  make.sh
doc/: formats.md  stats.md
doc/scripting-language/: language-specification  lexer-grammar  lexer-specification  parser-grammar  vm-specification
include/: arraylist.h
res/: engine-modules.csv
res/modules/scripts/: player_api.wren
res/modules/stats/: armors.csv  engines.csv  misc.csv  reactors.csv  shields.csv
res/modules/weapons/: energy.csv  kinetics.csv
res/prototypes/: large.csv  medium.csv  small.csv
src/: CMakeLists.txt  main.c
src/client/: CMakeLists.txt  main.c
src/client/ui/: CMakeLists.txt  ui.c  ui.h  worldview.c
src/common/: CMakeLists.txt  util.h
src/common/RotatingLogs/: rotatinglogs.c  rotatinglogs.h
src/common/arraylist/: arraylist.c
src/common/buffer/: buffer.h
src/common/coordinate/: coordinate.c  coordinate.h
src/common/dynamicbuffer/: dynamicbuffer.c  dynamicbuffer.h
src/common/lexer/: .lexer.c.swp  lexer.c  lexer.h
src/common/memorypool/: memoryarena.h
src/common/threading/: threading.c
src/game/: CMakeLists.txt  action.h  config.h  feature.c  feature.h  game.c  game.h  gameobject.c  gameobject.h  gamereference.h  module.h  modulestore.h  player.h  script.c  script.h  sector.h  shared.h  ship.c  ship.h  stats.c  stats.h  tick.c  tick.h  tile.h  world.c  world.h  worldgen.c  worldgen.h
src/game/wren/: wrencallbacks.c  wrencallbacks.h  wrenengine.c  wrenengine.h  wrenerror.h  wrenlogs.c  wrenlogs.h  wrenuserdata.h
src/logic/: CMakeLists.txt  errorcodes.h  util.c  util.h
src/logic/arraylist/: arraylist.h
src/logic/buffer/: buffer.c
src/logic/coordinate/: coordinate.c
src/logic/dynamicbuffer/: dynamicbuffer.c  dynamicbuffer.h
src/logic/lexer/: lexer.c  lexer.h
src/logic/memorypool/: memoryarena.c  memoryarena.h  memorypool.c  memorypool.h
src/logic/rand/: opensimplex.c  opensimplex.h  xoshiro256.c  xoshiro256.h
src/logic/threading/: threading.c  threading.h
src/logic/ubc/: linker.h  parser.c  parser.h  tokenreader.c  tokenreader.h  types.h  ubc.h  ubcvm.h
src/server/: CMakeLists.txt  game.h  gameobject.c  main.c  modulestore.c  s_world.h  stats.c  stats.h  tile.h  vfs.h  world.c  world.h  worldgen.c  worldgen.h
src/server/ubc/: CMakeLists.txt  parser.c  parser.h  tokenreader.h  ubc.h  ubcvm.c
src/ui/: CMakeLists.txt  gfx.h  sidebar.c  sidebar.h  ui.c  ui.h  window.c  window.h  worldview.c  worldview.h
tests/: CMakeLists.txt  a.out  ansitest.c  ansitest.c.test  coordinate-test.c  coordinate.test.c  lexertest.c  lexertest.c.test  memorypool-test.c.test  memorypool.test.c  opensimplex.c.test  opensimplex.test.c  thread.test.c  threadtest.c.test  worldgen.c  worldgen.test.c  xoshiro.test.c  xoshirotest.c.test
tests/ubc/: CMakeLists.txt  a.out  addition.test.c  customtype.test.c  eof.c  eof.c.test  eof.test.c  include.c  include.c.test  include.test.c  literalmath.test.c  logic-and.test.c  nestedtypes.test.c  unknownvar.test.c  unkownvar.c.test  unkownvar.test.c
